--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+/* @media (prefers-color-scheme: dark) {
+   :root {
+   }
+} */
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+   font-family: Arial, Helvetica, sans-serif;
+}
+
+._container {
+   max-width: 1279px;
+   margin: 0 auto;
+   padding-left: 1rem;
+   padding-right: 1rem;
+}
+
+input[type='number'] {
+   appearance: textfield; /* Для Firefox */
+}
+
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+   -webkit-appearance: none;
+   margin: 0; /* Для Chrome, Safari, Edge */
 }
